--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
@@ -1,3 +1,8 @@
 <script src="/etc/clientlibs/foundation/jquery/jquery-2.1.4.min.js"></script>
 <script src="/etc/clientlibs/foundation/tinymce/tinymce.min.js"></script>
 <script src="/etc/clientlibs/foundation/tinymce/jquery.tinymce.min.js"></script>
+<script>
+  $(function(){
+    $('.blog-edit-content').tinymce({theme: 'modern'});
+  });
+</script
