--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/head.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/head.html
@@ -1,4 +1,5 @@
 <head>
   <title data-sly-text="${properties.jcr:title || properties.title || resource.name}"></title>
   <meta data-sly-include="meta.html" data-sly-unwrap></meta>
+  <link data-sly-include="links.html" data-sly-unwrap></link>
 </head>
