Create Assets and upload capability
Create Assets feature. Add link to dashboard. Add Angular. Create Assets and Images
structure. Add breadcrumbs and ability to browse assets.

--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/sidebar.html
@@ -21,6 +21,9 @@
             <li>
                 <a href="/content/admin/edit.html"><i class="fa fa-pencil fa-fw"></i> New Blog</a>
             </li>
+            <li>
+                <a href="/content/admin/assets.html"><i class="fa fa-image fa-fw"></i> Assets</a>
+            </li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
