--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
@@ -1,5 +1,8 @@
 <script src="/etc/clientlibs/foundation/jquery/dist/jquery.min.js"></script>
 <script src="/etc/clientlibs/foundation/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/etc/clientlibs/foundation/angular/angular.min.js"></script>
+<script src="/etc/clientlibs/foundation/angular/angular.route.min.js"></script>
+<script src="/etc/clientlibs/foundation/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/etc/clientlibs/foundation/metisMenu/dist/metisMenu.min.js"></script>
 <script src="/etc/clientlibs/foundation/tinymce/tinymce.min.js"></script>
 <script src="/etc/clientlibs/foundation/tinymce/jquery.tinymce.min.js"></script>
