Insert images from the JCR into the rich text editor
Replace TinyMCE with Summernote HTML5 WYSIWYG editor. Create slingasset plugin to
allow users to browse the JCR and insert images in the the rich text editor. The
plugin uses the same Angular assetList component. Update assetList component to
include a hidden field for the selected image.

--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminPage/scripts.html
@@ -4,8 +4,7 @@
 <script src="/etc/clientlibs/foundation/angular/angular.route.min.js"></script>
 <script src="/etc/clientlibs/foundation/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/etc/clientlibs/foundation/metisMenu/dist/metisMenu.min.js"></script>
-<script src="/etc/clientlibs/foundation/tinymce/tinymce.min.js"></script>
-<script src="/etc/clientlibs/foundation/tinymce/jquery.tinymce.min.js"></script>
-<script src="/etc/clientlibs/foundation/tinymce/jquery.tinymce.min.js"></script>
 <script src="/etc/clientlibs/foundation/sb-admin-2/dist/js/sb-admin-2.js"></script>
+<script src="/etc/clientlibs/foundation/summernote/summernote.min.js"></script>
+<script src="/etc/clientlibs/admin/js/summernote-ext-slingasset.js"></script>
 <script src="/etc/clientlibs/admin/js/admin.js"></script>
