--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/navigation.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/navigation.html
@@ -16,7 +16,7 @@
                 <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-                <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                <li><a href="login.html" class="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                 </li>
             </ul>
             <!-- /.dropdown-user -->
