Create reCAPTCHA config
Create config section and add to sidebar. Update constants with sidebar links.
Update initial content to provide a config but not override on next build.
Create recaptchaconfig component and Java bean. Create recaptcha servelt to
update properties.

--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/sidebar.html
@@ -24,6 +24,9 @@
             <li>
                 <a href="/content/admin/assets.html"><i class="fa fa-image fa-fw"></i> Assets</a>
             </li>
+            <li>
+                <a href="/content/admin/config.html"><i class="fa fa-wrench fa-fw"></i> Config</a>
+            </li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
