Create user management console
Add User managerment to admin section. Add Angular-bootstrap library for modals.
Create UserService Angular factory to interact with Sling UserManager Post
servlets.

There are three groups for users. "authors" for blog content publishers. "testers"
to log in and view the site, but not make changes - mainly for demo purposes. The
third "group" isn't really a group. It's called "admin" and includes users without
a group such as the default "admin" and "anonymous". Users can be added "authors"
and "testers" but not admin, and same for deletions. Any user can be updated in
that their display name or password can be changed.

--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/scripts.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/scripts.html
@@ -2,6 +2,7 @@
 <script src="/etc/clientlibs/foundation/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/etc/clientlibs/foundation/angular/angular.min.js"></script>
 <script src="/etc/clientlibs/foundation/angular/angular.route.min.js"></script>
+<script src="/etc/clientlibs/foundation/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/etc/clientlibs/foundation/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/etc/clientlibs/foundation/metisMenu/dist/metisMenu.min.js"></script>
 <script src="/etc/clientlibs/foundation/sb-admin-2/dist/js/sb-admin-2.js"></script>
