--- a/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/pages/adminSecurePage/sidebar.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="/content/admin/config.html"><i class="fa fa-wrench fa-fw"></i> Config</a>
             </li>
+            <li>
+                <a href="/content/admin/users.html"><i class="fa fa-user fa-fw"></i> Users</a>
+            </li>
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
