Display paginated list view of blog posts in sorted order of newest first
Add a new page at /blog/index.html to display all blog posts. Make blog post inherit
from basic page. Basic page is the public pages for the system. Create the BlogPost
service to get the posts with two criteria, starting point and number of posts. Add
method to return total number of posts. Change query from xpath to sql2 and order
by jcr:created date. Add mix:created mixin to blog posts on creation. Create new
BlogPagination component.

--- a/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/body.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/body.html
@@ -1,3 +1,5 @@
 <body>
   <div data-sly-resource="jcr:content/mainContent" data-sly-unwrap></div>
+
+  <script data-sly-include="scripts.html" data-sly-unwrap></script>
 </body>
