--- a/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
@@ -2,8 +2,8 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
             <li class="sidebar-search">
-                <div class="input-group custom-search-form">
-                    <a class="btn btn-primary" href="/content/admin/edit.html" role="button">Create new blog post!</a>
+                <div class="input-group custom-search-form full-width">
+                    <a class="btn btn-primary btn-block" href="/content/admin/edit.html" role="button">Create new blog post!</a>
                 </div>
             </li>
             <li class="sidebar-link">
@@ -26,6 +26,9 @@
                 <ul class="nav nav-second-level">
                     <li>
                         <a href="/content/admin/config/recaptcha.html"> reCAPTCHA</a>
+                    </li>
+                    <li>
+                        <a href="/content/admin/config/email.html"> email</a>
                     </li>
                 </ul>
             </li>
