--- a/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
@@ -1,2 +1,3 @@
 <script src="/etc/clientlibs/foundation/jquery/dist/jquery.min.js"></script>
 <script src="/etc/clientlibs/foundation/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/etc/clientlibs/foundation/publick/js/publick.js"></script>
