--- a/ui/src/main/resources/jcr_root/libs/publick/pages/blogPage/body.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/blogPage/body.html
@@ -1,5 +1,6 @@
 <body>
   <div data-sly-resource="${@ resourceType='publick/components/foundation/blogView'}" data-sly-unwrap></div>
+  <div data-sly-resource="${@ resourceType='publick/components/foundation/commentsView'}" data-sly-unwrap></div>
 
   <script data-sly-include="scripts.html" data-sly-unwrap></script>
 </body>
