--- a/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
@@ -1,3 +1,4 @@
 <script src="/etc/clientlibs/foundation/jquery/dist/jquery.min.js"></script>
 <script src="/etc/clientlibs/foundation/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/etc/clientlibs/foundation/publick/js/publick.js"></script>
+<script src='https://www.google.com/recaptcha/api.js'></script>
