Add System Settings configuration
Add link to sidebar. Add component with blog name field. Add servlet to accept form
post. Add Service Interface and Implementation to update and get system settings.
Update readme and admin welcome page to include instructions.

--- a/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
@@ -25,6 +25,9 @@
                 <a href="#"><i class="fa fa-wrench fa-fw"></i> Configuration<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
+                        <a href="/content/admin/config/system.html"> System Settings</a>
+                    </li>
+                    <li>
                         <a href="/content/admin/config/recaptcha.html"> reCAPTCHA</a>
                     </li>
                     <li>
