Change index.html content nodes to the parent node
Change admin/index.html and blog/index.html to admin.html and blog.html. The purpose
is for extentionless URLs.

--- a/ui/src/main/resources/jcr_root/apps/sling/servlet/errorhandler/404.html
+++ b/ui/src/main/resources/jcr_root/apps/sling/servlet/errorhandler/404.html
@@ -12,7 +12,7 @@
         <h1 class="text-center">404</h1>
         <h2 class="text-center margin-top-80">This page does not exist.</h2>
 
-        <p class="text-center margin-top-80">Try the <a href="/index.html">Home Page</a> or find a <a href="/blog/index.html">blog post</a>.</p>
+        <p class="text-center margin-top-80">Try the <a href="/index.html">Home Page</a> or find a <a href="/blog.html">blog post</a>.</p>
       </div>
     </div>
   </div>
