--- a/ui/src/main/resources/jcr_root/apps/sling/servlet/errorhandler/default.html
+++ b/ui/src/main/resources/jcr_root/apps/sling/servlet/errorhandler/default.html
@@ -16,7 +16,7 @@
         <div data-sly-test="${error.isAnonymous}" data-sly-unwrap>
           <h2 class="text-center margin-top-80">Sorry, something went wrong.</h2>
 
-          <p class="text-center margin-top-80">Try the <a href="/index.html">Home Page</a> or find a <a href="/blog/index.html">blog post</a>.</p>
+          <p class="text-center margin-top-80">Try the <a href="/index.html">Home Page</a> or find a <a href="/blog.html">blog post</a>.</p>
         </div> 
       </div>
     </div>
