--- a/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
@@ -7,7 +7,7 @@
                 </div>
             </li>
             <li class="sidebar-link">
-                <a href="/content/admin/index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                <a href="/content/admin.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li class="sidebar-link">
                 <a href="/content/admin/list.html"><i class="fa fa-list-alt fa-fw"></i> Blog List</a>
