--- a/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/navigation.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/navigation.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/content/admin/index.html">Publick Admin</a>
+        <a class="navbar-brand" href="/content/admin.html">Publick Admin</a>
     </div>
     <!-- /.navbar-header -->
 
