Add admin comments section
Create comments page in the admin section and add a commentList control. Create
a commentList control that uses Angular to get all comments. Create an Angular
comment controller and comment service to communicate with the server. Add the
new JS files to the Grunt build task. Create a servlet to respond to the GET
request for all comments. Create a comment service to provide comment CRUD.

TODO: move comment creation from current servlet to the service. Create client
side work to tie in deletion, editing, spam and ham updates using the servlet
and Akismet service.

--- a/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/adminSecurePage/sidebar.html
@@ -10,10 +10,13 @@
                 <a href="/content/admin.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li class="sidebar-link">
+                <a href="/content/admin/edit.html"><i class="fa fa-pencil fa-fw"></i> New Blog</a>
+            </li>
+            <li class="sidebar-link">
                 <a href="/content/admin/list.html"><i class="fa fa-list-alt fa-fw"></i> Blog List</a>
             </li>
             <li class="sidebar-link">
-                <a href="/content/admin/edit.html"><i class="fa fa-pencil fa-fw"></i> New Blog</a>
+                <a href="/content/admin/comments.html"><i class="fa fa-comments fa-fw"></i> Comment List</a>
             </li>
             <li class="sidebar-link">
                 <a href="/content/admin/assets.html"><i class="fa fa-image fa-fw"></i> Assets</a>
